# sql-llm-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/agents/: mcp_agent.py  router.py  sql_agent.py
app/api/: chat.py  mcp.py  query.py
app/core/: config.py  logging.py  redis.py  startup.py
app/db/: executor.py  introspection.py  models.py  validator.py
app/llm/: base.py  models.py  ollama.py  utils.py
app/llm/prompts/: base.txt  mcp.txt  query.txt  sql_generator.txt  sql_validator.txt  system.txt
app/mcp/: permissions.py  server.py  tools.py
app/orchestrator/: query_pipline.py
app/rag/: documents.py  embedder.py  embeddings.py  pipline.py  qdrant_client.py  retriever.py  schema_loader.py
app/sql/: errors.py  validator.py
app/utils/: hashing.py  sql.py
app/validation/: limits.py  safety.py  sql_validator.py
docker/: api.Dockerfile  docker-compose.yml  ollama.Dockerfile
docker/postgresql/: docker-compose.yml  init.sql
frontend/src/: api.ts  app.py
tests/: test_mcp.py  test_sql_generation.py  test_validation.py
